Updated User entity to accept birthday and gender